Configure and fix LineLength

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,10 @@
 Lint/Eval:
   Enabled: false
 
+# Be relatively lenient with line length
+Metrics/LineLength:
+  Max: 92
+
 # Support Ruby 1.8
 Style/HashSyntax:
   EnforcedStyle: hash_rockets
