--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,10 @@ rvm:
   - 2.1
   - jruby-18mode
   - jruby-19mode
+  - jruby-head
   - rbx-2
+matrix:
+  allow_failures:
+    - rvm: jruby-18mode
+    - rvm: jruby-19mode
+    - rvm: jruby-head
