--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: ruby
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1
-  - jruby-19mode
+  - 2.1.9
+  - 2.2.6
+  - 2.3.3
+  - jruby-9.1
   - jruby-head
-  - rbx-2
+  - rbx-3.69
+  - ruby-head
+  - ruby-head-clang
+before_install:
+  - gem update bundler
 matrix:
   allow_failures:
-    - rvm: jruby-19mode
+    - rvm: jruby-9.1
     - rvm: jruby-head
+    - rvm: rbx-3.69
+    - rvm: ruby-head
+    - rvm: ruby-head-clang
