--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,10 @@
-# Using eval is the bread and butter of Iba
-Lint/Eval:
-  Enabled: false
-
 # Be relatively lenient with line length
 Metrics/LineLength:
   Max: 92
+
+# Using eval is the bread and butter of Iba
+Security/Eval:
+  Enabled: false
 
 # Prefer no parentheses in method definitions
 Style/MethodDefParentheses:
