--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ rvm:
   - 2.7
   - jruby-9.2
   - jruby-head
-  - rubinius-4.6
+  - rbx-4.6
+  - rbx-4.20
+  - rbx-5.0
   - ruby-head
   - ruby-head-clang
 
