--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,19 @@ dist: xenial
 cache:
   bundler: true
 
-rvm:
-  - 2.5
-  - 2.6
-  - 2.7
-  - jruby-9.2
-  - jruby-head
-  - ruby-head
-  - ruby-head-clang
-
-matrix:
+jobs:
+  include:
+    - rvm: 2.5
+    - rvm: 2.6
+    - rvm: 2.7
+    - rvm: jruby-9.2
+    - rvm: jruby-head
+    - rvm: ruby-head
+    - rvm: ruby-head-clang
+    - rvm: 2.7.1
+      name: "RuboCop"
+      before_install: []
+      script: bundle exec rubocop
   allow_failures:
     - rvm: jruby-head
     - rvm: ruby-head
