--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.5, 2.6, 2.7, jruby-9.2, head, jruby-head]
+        ruby: [2.5, 2.6, 2.7, "3.0", jruby-9.2, head, jruby-head]
 
     steps:
     - uses: actions/checkout@v2
