--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.6, 2.7, "3.0", jruby-9.3, head, jruby-head]
+        ruby: [2.6, 2.7, "3.0", "3.1", jruby-9.3, head, jruby-head]
 
     steps:
       - uses: actions/checkout@v2
