--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,12 +1,14 @@
 inherit_from: .rubocop_todo.yml
 
+inherit_mode:
+  merge:
+    - Exclude
+
 require:
   - rubocop-packaging
   - rubocop-performance
 
 AllCops:
-  Exclude:
-    - 'vendor/bundle/**/*'
   NewCops: enable
   TargetRubyVersion: 2.6
 
